Fix incorrect whitespace after calling CommitText() with empty text

In https://codereview.chromium.org/2874783004, we changed our implementation of
Android's InputConnection#commitText() method so that it doesn't special-case
empty strings (previously it wasn't deleting the selection/composition range in
this case). This exposed a bug in InsertTextCommand where it's not properly
rebalancing whitespace in the case where the inserted text is empty.

This CL avoids trying to perform a "trivial replacement" for the case where the
inserted text is empty, since the logic is clearly not correct for this case.

Bug: 752860
Change-Id: Ia2930ee40a286a59f7c80452cd0a8adf531c7a26
Reviewed-on: https://chromium-review.googlesource.com/704002
Reviewed-by: Changwan Ryu <changwan@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Ryan Landay <rlanday@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507674}
Former-commit-id: 88274b8a49faf895bb7758de53a60dd2561c2a22